bk_ida/gccida/c1/do_compare_and_jump
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_compare_and_jump/src/expr.c:10532:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code signed_code, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_compare_and_jump/src/expr.c:10533:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code unsigned_code, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_compare_and_jump/src/expr.c:10578:58: error: use of undeclared identifier 'machine_mode'
do_compare_rtx_and_jump( v19, v16, unsigned_code, v17, ( machine_mode)v15, v18, if_false_label, v20); 
                                                         ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_compare_and_jump/src/obj/expr.o] Error 1
